sumo/tests/duarouter/alternatives/style2_input/errors/vehicle/vehicle_empty_arrivalpos/errors.duarouter
Error: Attribute 'arrivalPos' in definition of a vehicle is empty.
Error: Invalid arrivalPos definition for vehicle '1';
 must be one of ("random", "max", or a float)
Quitting (on error).
